(lang dune 3.6)

(name ojo)

(generate_opam_files true)

(source
 (github arxaqapi/ojo))

(authors "arxaqapi")

(maintainers "arxaqapi")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ojo)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
